Fixed Uneven spacing of Points

--- a/src/styles/Less/components/AdminLeaderboard.less
+++ b/src/styles/Less/components/AdminLeaderboard.less
@@ -55,15 +55,16 @@
   }
   .cardClass {
     margin: unset;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    padding: 20px;
   
     .name {
+      text-align: start;
       padding: unset;
       margin: unset;
-      flex: 1 1 auto;
+      flex: 1 1 100%;
       margin: unset;
       width: unset;
       font-size: 24px;
@@ -74,7 +75,7 @@
       padding: unset;
       margin: unset;
       text-align: center;
-      flex: 1 1 auto;
+      flex: 1 1 100%;
       font-size: 24px;
       font-family: "gopher", sans-serif;
       font-weight: 500;
@@ -83,7 +84,7 @@
       margin: unset;
       width: unset;
       padding: unset;
-      flex: 2.25 1 auto;
+      flex: 1 1 100%;
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
@@ -129,9 +130,7 @@
     justify-content: flex-end;
   }
 }
-.cardClass {
-  background-color: black;
-}
+
 
 div.card{
   border: none;
@@ -165,7 +164,6 @@ div.card-body {
     div {
       flex: 1 1 100%;
       margin: unset;
-      font-size: 24px;
       padding: 10px;
     }
   }
